Fixed form handling routing
changed to GET from POST
fixed dynamic display of form answers
improved styling on success page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -21,7 +20,7 @@
             <p>Who really knows what this website is for? But don't miss out. You'll be sad. </p>
         </div>
         <div class="form">
-            <form action="accountCreated.html" method="post">
+            <form action="accountCreated.html" method="get">
                 <h2>Fill it out mate.</h2>
                 <div id="fieldsContainer">
                     <div class="column1">
@@ -45,7 +44,7 @@
                     </label>
                     <label for="mobilePhone">
                         Mobile Phone: 
-                        <input type="tel" name="mobilePhone" id="mobilePhone">
+                        <input type="tel" name="mobilePhone" id="mobilePhone" placeholder="">
                     </label>
                     <label for="confirmPassword">
                         Confirm Password: 
