--- a/accountCreated.html
+++ b/accountCreated.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="thanksContainer">
     <div class="signUpThanks"></div>
+    </main>
 </body>
 </html>
